--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lpthread")
 add_subdirectory(lib/googletest-master)
 include_directories(lib/googletest-master/googletest/include)
 
-set(SOURCE_FILES src/Board.cpp src/Board.h src/Player.h src/HumanPlayer.h src/HumanPlayer.cpp src/Player.cpp src/Game.h src/Game.cpp src/GameParameters.cpp src/GameParameters.h src/BoardCoordinates.cpp src/BoardCoordinates.h src/GameLogic.cpp src/GameLogic.h src/StandartGameLogic.cpp src/StandartGameLogic.h  src/AIPlayer.h src/AIPlayer.cpp src/MiniMaxSimulator.cpp src/MiniMaxSimulator.h src/RemotePlayer.cpp src/RemotePlayer.h)
+set(SOURCE_FILES src/client/Board.cpp src/client/Board.h src/client/Player.h src/client/HumanPlayer.h src/client/HumanPlayer.cpp src/client/Player.cpp src/client/Game.h src/client/Game.cpp src/client/GameParameters.cpp src/client/GameParameters.h src/client/BoardCoordinates.cpp src/client/BoardCoordinates.h src/client/GameLogic.cpp src/client/GameLogic.h src/client/StandartGameLogic.cpp src/client/StandartGameLogic.h src/client/AIPlayer.h src/client/AIPlayer.cpp src/client/MiniMaxSimulator.cpp src/client/MiniMaxSimulator.h src/client/RemotePlayer.cpp src/client/RemotePlayer.h)
 set(TESTS_FILES tests/MiniMaxSimulatorTest.cpp tests/BoardTest.cpp tests/GameLogicTest.cpp)
 
-add_executable(ex4 ${SOURCE_FILES} src/main.cpp)
+add_executable(ex4 ${SOURCE_FILES} src/client/main.cpp)
 add_executable(tests ${SOURCE_FILES} ${TESTS_FILES} tests/gtest_main.cpp)
 
 target_link_libraries(tests gtest gtest_main pthread)
